--- a/css/style.css
+++ b/css/style.css
@@ -1,253 +1,143 @@
 @import url("reset.css");
-@import url("button.css");
+@import url("news.css");
 @import url("workflow.css");
+@import url("about.css");
 @font-face {
-  font-family: 'Open-sans';
-  src: url(fond/Open_Sans/OpenSans-Light.ttf);
+    font-family: 'Open-sans';
+    src: url(fond/Open_Sans/OpenSans-Light.ttf);
 }
 
 * {
-  font-family: 'Open-sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open-sans', Arial, Helvetica, sans-serif;
 }
 
 h3 {
-  padding-top: 90px;
-  font-size: 30px;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 77.37px;
-  text-transform: uppercase;
-  text-align: center;
+    padding-top: 90px;
+    font-size: 30px;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 77.37px;
+    text-transform: uppercase;
+    text-align: center;
 }
 
 p {
-  margin-top: 20px;
+    margin-top: 20px;
+}
+
+.content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
 }
 
 nav {
-  background-color: #ffffff;
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: distribute;
-  justify-content: space-around;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  height: 60px;
+    background-color: #ffffff;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 60px;
 }
 
 nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
 }
 
 nav ul li {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 nav ul li:after {
-  content: "\007C";
-  margin: 0 30px 0;
+    content: "\007C";
+    margin: 0 30px 0;
 }
 
 @media (max-width: 1024px) {
-  nav ul li:after {
-    margin: 0 20px 0;
-  }
+    nav ul li:after {
+        margin: 0 20px 0;
+    }
 }
 
 nav ul li:last-child::after {
-  content: "";
-  margin: 0;
+    content: "";
+    margin: 0;
 }
 
 nav ul a {
-  color: #ffffff;
-  text-transform: uppercase;
-  text-decoration: none;
-  width: 664px;
-  height: 13px;
-  color: #000000;
-  font-size: 13px;
-  font-weight: 400;
-  line-height: 24px;
-  text-transform: uppercase;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-decoration: none;
+    width: 664px;
+    height: 13px;
+    color: #000000;
+    font-size: 13px;
+    font-weight: 400;
+    line-height: 24px;
+    text-transform: uppercase;
+    padding: 5px 0 5px;
+}
+
+nav ul a:hover {
+    border-bottom: 3px solid #f4bb36;
+}
+
+nav ul a:active {
+    border-bottom: 2px solid #f4bb36;
 }
 
 @media (max-width: 768px) {
-  nav ul {
-    display: none;
-  }
+    nav ul {
+        display: none;
+    }
 }
 
 .burger {
-  position: relative;
-  width: 30px;
-  height: 20px;
-  display: none;
+    position: relative;
+    width: 30px;
+    height: 20px;
+    display: none;
 }
 
-.burger:before, .burger:after,
+.burger:before,
+.burger:after,
 .burger span {
-  content: "";
-  position: absolute;
-  background-color: #000;
-  width: 30px;
-  height: 4px;
-  -webkit-transition: all 0.1s ease 0s;
-  -o-transition: all 0.1s ease 0s;
-  transition: all 0.1s ease 0s;
-  border-radius: 2px;
+    content: "";
+    position: absolute;
+    background-color: #000;
+    width: 30px;
+    height: 4px;
+    -webkit-transition: all 0.1s ease 0s;
+    -o-transition: all 0.1s ease 0s;
+    transition: all 0.1s ease 0s;
+    border-radius: 2px;
 }
 
 .burger:before {
-  top: 0;
+    top: 0;
 }
 
 .burger:after {
-  bottom: 0;
+    bottom: 0;
 }
 
 .burger span {
-  top: 8px;
+    top: 8px;
 }
 
 @media (max-width: 768px) {
-  .burger {
-    display: block;
-  }
-}
-
-.news {
-  background: url(../img/slider_block/layer_1.jpg) no-repeat center/cover;
-  height: 590px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
-.news_slider {
-  max-width: 100%;
-}
-
-.news_slider_blocks {
-  outline: none;
-}
-
-.news_slider_blocks_text {
-  max-width: 1185px;
-  margin: 0 auto;
-  text-align: center;
-  color: #ffffff;
-  padding: 0 10px 0;
-}
-
-.news_slider_blocks_text h6 {
-  font-size: 28px;
-  font-weight: 400;
-}
-
-.news_slider_blocks_text h1 {
-  text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
-  font-size: 65px;
-  text-transform: uppercase;
-}
-
-.news_slider_blocks_text h1 span {
-  color: #f4bb36;
-}
-
-@media (max-width: 768px) {
-  .news_slider_blocks_text h1 {
-    font-size: 45px;
-  }
-}
-
-.news_slider_blocks_text p {
-  font-size: 15px;
-  font-weight: 400;
-  margin: 0 auto;
-  max-width: 850px;
-}
-
-.news_slider_blocks_sl-img {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.news_slider_blocks_sl-img img {
-  max-width: 100%;
-  max-width: 100%;
-}
-
-.btn {
-  padding: 8px 20px;
-  font-size: 20px;
-  cursor: pointer;
-  position: relative;
-  border: 2px solid #f4bb36;
-  outline: none;
-  color: white;
-  background-color: transparent;
-  margin: 20px;
-  white-space: nowrap;
-}
-
-.btn::after, .btn::before {
-  content: "";
-  position: absolute;
-  border: 2px solid #f4bb36;
-  width: calc(100% - 5px);
-  height: 20px;
-  -webkit-transition: 0.5s ease;
-  -o-transition: 0.5s ease;
-  transition: 0.5s ease;
-}
-
-.btn::after {
-  top: -8px;
-  left: -8px;
-  border-right: none;
-  border-bottom: none;
-}
-
-.btn::before {
-  bottom: -8px;
-  right: -8px;
-  border-left: none;
-  border-top: none;
-}
-
-.btn:hover:after, .btn:hover:before {
-  width: calc(100% - 35px);
-  height: 40px;
-}
-
-.wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+    .burger {
+        display: block;
+    }
 }
