--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,8 @@
+// @import url("button.css");
 @import url("reset.css");
-@import url("button.css");
+@import url("news.css");
 @import url("workflow.css");
+@import url("about.css");
 $yel: #f4bb36;
 $grey: #414141;
 @font-face {
@@ -24,6 +26,11 @@ h3 {
 
 p {
     margin-top: 20px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
@@ -62,6 +69,13 @@ nav {
             font-weight: 400;
             line-height: 24px;
             text-transform: uppercase;
+            padding: 5px 0 5px;
+            &:hover {
+                border-bottom: 3px solid $yel;
+            }
+            &:active {
+                border-bottom: 2px solid $yel;
+            }
         }
         @media (max-width: 768px) {
             display: none;
@@ -98,106 +112,4 @@ nav {
     @media (max-width: 768px) {
         display: block;
     }
-}
-
-.news {
-    background: url(../img/slider_block/layer_1.jpg) no-repeat center / cover;
-    // background-size: cover;
-    height: 590px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &_slider {
-        max-width: 100%;
-        &_blocks {
-            // display: flex;
-            // justify-content: center;
-            // align-items: center;
-            outline: none;
-            &_text {
-                max-width: 1185px;
-                margin: 0 auto;
-                // margin-top: 120px;
-                text-align: center;
-                color: #ffffff;
-                padding: 0 10px 0;
-                h6 {
-                    font-size: 28px;
-                    font-weight: 400;
-                }
-                h1 {
-                    text-shadow: 2px 3px 0 rgba(0, 0, 0, 0.36);
-                    font-size: 65px;
-                    text-transform: uppercase;
-                    span {
-                        color: $yel;
-                    }
-                    @media (max-width: 768px) {
-                        font-size: 45px;
-                    }
-                }
-                p {
-                    font-size: 15px;
-                    font-weight: 400;
-                    margin: 0 auto;
-                    max-width: 850px;
-                }
-            }
-            &_sl-img {
-                display: flex;
-                justify-content: center;
-                img {
-                    max-width: 100%;
-                    max-width: 100%;
-                    // object-fit: none;
-                }
-            }
-        }
-    }
-}
-
-.btn {
-    padding: 8px 20px;
-    font-size: 20px;
-    cursor: pointer;
-    position: relative;
-    border: 2px solid $yel;
-    outline: none;
-    color: white;
-    background-color: transparent;
-    margin: 20px;
-    white-space: nowrap;
-    &::after,
-    &::before {
-        content: "";
-        position: absolute;
-        border: 2px solid $yel;
-        width: calc(100% - 5px);
-        height: 20px;
-        transition: 0.5s ease;
-    }
-    &::after {
-        top: -8px;
-        left: -8px;
-        border-right: none;
-        border-bottom: none;
-    }
-    &::before {
-        bottom: -8px;
-        right: -8px;
-        border-left: none;
-        border-top: none;
-    }
-    &:hover:after,
-    &:hover:before {
-        width: calc(100% - 35px);
-        height: 40px;
-    }
-}
-
-.wrap {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
 }
