--- a/slick/slick-theme.scss
+++ b/slick/slick-theme.scss
@@ -13,10 +13,10 @@ $slick-dot-color-active: $slick-dot-color !default;
 $slick-prev-character: "\2190" !default;
 $slick-next-character: "\2192" !default;
 $slick-dot-character: "\2022" !default;
-$slick-dot-size: 10px !default;
-$slick-opacity-default: 0.75 !default;
-$slick-opacity-on-hover: 1 !default;
-$slick-opacity-not-active: 0.25 !default;
+$slick-dot-size: 12px !default;
+$slick-opacity-default: 1 !default;
+$slick-opacity-on-hover: 0.75 !default;
+$slick-opacity-not-active: 0.66 !default;
 @function slick-image-url($url) {
     @if function-exists(image-url) {
         @return image-url($url);
@@ -193,6 +193,7 @@ $slick-opacity-not-active: 0.25 !default;
         }
         &.slick-active button:before {
             color: $slick-dot-color-active;
+            font-size: 14px;
             opacity: $slick-opacity-default;
         }
     }
