--- a/css/about.css
+++ b/css/about.css
@@ -10,7 +10,7 @@
 }
 
 .about_element {
-  padding: 0 10px;
+  padding: 0 10px 40px;
   max-width: 1185px;
 }
 
@@ -26,6 +26,7 @@
   color: #8e561b;
   font-size: 40px;
   font-weight: 100;
+  line-height: 42px;
 }
 
 .about_element_greeting p {
@@ -33,7 +34,7 @@
   color: #8e561b;
   font-size: 15px;
   font-style: italic;
-  line-height: 24px;
+  margin-top: 10px;
 }
 
 .about_element_doit {
@@ -53,6 +54,7 @@
   -webkit-box-flex: 0;
   -ms-flex: 0 0 50%;
   flex: 0 0 50%;
+  position: relative;
 }
 
 .about_element_doit_img img {
@@ -60,6 +62,8 @@
   width: 100%;
   -o-object-fit: cover;
   object-fit: cover;
+  top: 0;
+  left: 0;
 }
 
 .about_element_doit_proces-history {
@@ -106,10 +110,10 @@
     max-width: 768px;
     text-align: center;
     margin-top: 20px;
+    margin-left: 0;
   }
   .about_element_doit_proces-history_btn {
-    text-align: right;
-    right: 30px;
+    text-align: center;
     bottom: 20px;
   }
 }
