--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,10 @@
 @import url("news.css");
 @import url("workflow.css");
 @import url("about.css");
+@import url("portfolio.css");
 @font-face {
   font-family: 'Open-sans';
-  src: url(../fond/Open_Sans/OpenSans-Light.ttf);
+  src: url(../fond/Open_Sans/OpenSans-Regular.ttf);
 }
 
 @font-face {
@@ -17,13 +18,17 @@
   src: url(../fond/Open_Sans/OpenSans-ExtraBold.ttf);
 }
 
+@font-face {
+  font-family: 'OpenSans-Light';
+  src: url(../fond/Open_Sans/OpenSans-Light.ttf.ttf);
+}
+
 * {
   font-family: 'Open-sans', Arial, Helvetica, sans-serif;
 }
 
 h3 {
-  padding-top: 90px;
-  font-size: 30px;
+  padding-top: 60px;
   font-size: 30px;
   line-height: 77.37px;
   text-transform: uppercase;
@@ -33,6 +38,12 @@ h3 {
 
 h1 {
   font-family: 'OpenSans-Bold';
+}
+
+h5 {
+  font-size: 20px;
+  font-family: 'OpenSans-Bold';
+  text-transform: uppercase;
 }
 
 p {
