--- a/scss/about.scss
+++ b/scss/about.scss
@@ -4,7 +4,7 @@
       display: flex;
       justify-content: center;
       &_element {
-          padding: 0 10px;
+          padding: 0 10px 40px;
           max-width: 1185px;
           &_greeting {
               text-align: center;
@@ -15,13 +15,14 @@
                   color: #8e561b;
                   font-size: 40px;
                   font-weight: 100;
+                  line-height: 42px;
               }
               p {
                   margin: 0 auto;
                   color: #8e561b;
                   font-size: 15px;
                   font-style: italic;
-                  line-height: 24px;
+                  margin-top: 10px;
               }
           }
           &_doit {
@@ -31,10 +32,14 @@
               margin-top: 20px;
               &_img {
                   flex: 0 0 50%;
+                  position: relative;
                   img {
                       height: 100%;
                       width: 100%;
                       object-fit: cover;
+                      //   position: absolute;
+                      top: 0;
+                      left: 0;
                   }
               }
               &_proces-history {
@@ -72,9 +77,9 @@
                       max-width: 768px;
                       text-align: center;
                       margin-top: 20px;
+                      margin-left: 0;
                       &_btn {
-                          text-align: right;
-                          right: 30px;
+                          text-align: center;
                           bottom: 20px;
                       }
                   }
