--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,11 +3,12 @@
 @import url("news.css");
 @import url("workflow.css");
 @import url("about.css");
+@import url("portfolio.css");
 $yel: #f4bb36;
 $grey: #414141;
 @font-face {
     font-family: 'Open-sans';
-    src: url(../fond/Open_Sans/OpenSans-Light.ttf);
+    src: url(../fond/Open_Sans/OpenSans-Regular.ttf);
 }
 
 @font-face {
@@ -20,13 +21,17 @@ $grey: #414141;
     src: url(../fond/Open_Sans/OpenSans-ExtraBold.ttf);
 }
 
+@font-face {
+    font-family: 'OpenSans-Light';
+    src: url(../fond/Open_Sans/OpenSans-Light.ttf.ttf);
+}
+
 * {
     font-family: 'Open-sans', Arial, Helvetica, sans-serif;
 }
 
 h3 {
-    padding-top: 90px;
-    font-size: 30px;
+    padding-top: 60px;
     font-size: 30px;
     // font-weight: 900;
     line-height: 77.37px;
@@ -37,6 +42,12 @@ h3 {
 
 h1 {
     font-family: 'OpenSans-Bold';
+}
+
+h5 {
+    font-size: 20px;
+    font-family: 'OpenSans-Bold';
+    text-transform: uppercase;
 }
 
 p {
